--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+	<head>
+		<base href="/">
+		<meta charset="utf8">
+		<meta name="viewport" content="width=device-width">
 
-	<title>Svelte app</title>
+		<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
-	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='bundle.css'>
-</head>
-
-<body>
-	<script src='bundle.js'></script>
-</body>
+		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="stylesheet" href="global.css">
+		<link rel="stylesheet" href="bundle.css">
+		<script src="bundle.js" defer></script>
+	</head>
+	<body>
+	</body>
 </html>
